<resources>
    <string name="app_name">Mix Food</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="daftar">Sign Up</string>
    <string name="konfirmasi_pass">Confirm Password</string>
    <string name="ingin_login">Already have an account? Login here!</string>
    <string name="ingin_daftar">Don\'t have an account? Sign Up here!</string>
    <string name="username_error">Please enter your username</string>
    <string name="password_error">Please enter your password!</string>
    <string name="next">Next</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="username_error_daftar">Please input a new Username</string>
    <string name="email_error">Please input your E-mail</string>
    <string name="pass_error">Please input your new password</string>
    <string name="pass_not_match">Password did not match !</string>
    <string name="fullname_error">Please input your full name</string>
    <string name="dob_error">Please input your date of birth</string>
    <string name="phone_error">Please input your phone number</string>
    <string name="no_internet">No internet connection!</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="went_wrong">Something went wrong</string>
    <string name="user_pass_mismatch">Username and password mismatch!</string>
    <string name="username_taken">Username is taken!</string>
    <string name="email_taken">E-Mail is taken!</string>
    <string name="username_passed">Username passed</string>
    <string name="e_mail_passed">E-Mail passed</string>
</resources>
