<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/redMix">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/redMix"
        tools:context="id.ac.unsyiah.android.mixfood.LoginActivity">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="100dp"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/textUsername"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:width="250dp"
            android:ems="10"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/labelFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textUsername"
            android:layout_alignStart="@id/textUsername"
            android:layout_marginBottom="40dp"
            android:textColor="@color/black"
            android:labelFor="@id/textUsername"
            android:layout_centerHorizontal="true"
            android:text="@string/username"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/textPassword"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_below="@+id/textUsername"
            android:ems="10"
            android:width="250dp"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/labelPassword"
            android:labelFor="@id/textPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_alignBottom="@id/textPassword"
            android:layout_alignStart="@id/textPassword"
            android:layout_marginBottom="40dp"
            android:text="@string/password"
            android:textSize="17sp" />

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_below="@id/textPassword"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:textColor="@color/black"
            android:background="@drawable/button"
            android:onClick="intentLogin"
            android:text="@string/sign_in" />

        <TextView
            android:id="@+id/textDaftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/signInBtn"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:onClick="intentDaftar"
            android:text="@string/ingin_daftar" />

        <ProgressBar
            android:id="@+id/progressBarSignIn"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp" />

    </RelativeLayout>


</ScrollView>
