<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/redMix">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:context="id.ac.unsyiah.android.mixfood.LoginActivity">


        <EditText
            android:id="@+id/textFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/rounded_edittext"
            android:padding="7dp"
            android:textColor="@color/black"
            android:layout_marginTop="76dp"
            android:width="250dp"
            android:ems="10"
            android:inputType="textNoSuggestions" />

        <TextView
            android:id="@+id/labelFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textFullName"
            android:layout_alignStart="@+id/textFullName"
            android:textColor="@color/black"
            android:layout_marginBottom="40dp"
            android:labelFor="@id/textFullName"
            android:text="@string/username"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/textdob"
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:padding="7dp"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textFullName"
            android:layout_below="@+id/textFullName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:width="250dp"
            android:ems="10"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/labeldob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textdob"
            android:layout_alignStart="@+id/textdob"
            android:layout_marginBottom="40dp"
            android:labelFor="@id/textdob"
            android:textColor="@color/black"
            android:text="E-mail"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/textNoHp"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textdob"
            android:layout_below="@+id/textdob"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:padding="7dp"
            android:width="250dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/labelNoHp"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textNoHp"
            android:layout_alignStart="@+id/textNoHp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="22dp"
            android:labelFor="@+id/textNoHp"
            android:text="Password"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/textAddress"
            android:textColor="@color/black"
            android:background="@drawable/rounded_edittext"
            android:padding="7dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/textNoHp"
            android:layout_below="@+id/textNoHp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:width="250dp"
            android:ems="10"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/labelAddress"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/textAddress"
            android:layout_alignStart="@+id/textAddress"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="22dp"
            android:labelFor="@+id/textAddress"
            android:text="@string/konfirmasi_pass"
            android:textSize="17sp" />

        <Button
            android:id="@+id/daftarBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textAddress"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:background="@drawable/button"
            android:onClick="next"
            android:text="@string/next"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/daftarBtn"
            android:onClick="intentLogin"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:text="@string/ingin_login" />

        <ProgressBar
            android:id="@+id/progressBarUsername"
            style="?android:attr/progressBarStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/textFullName"
            android:layout_toEndOf="@+id/textFullName" />

        <ProgressBar
            android:id="@+id/progressBarEmail"
            style="?android:attr/progressBarStyle"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignTop="@+id/textdob"
            android:layout_toEndOf="@+id/textdob" />

        <ImageView
            android:contentDescription="@string/username_passed"
            android:id="@+id/usernameCheck"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_alignTop="@+id/textFullName"
            android:layout_toEndOf="@+id/textFullName"
            app:srcCompat="@drawable/circle_check" />

        <ImageView
            android:contentDescription="@string/e_mail_passed"
            android:id="@+id/emailCheck"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="3dp"
            android:layout_alignTop="@+id/textdob"
            android:layout_toEndOf="@+id/textdob"
            app:srcCompat="@drawable/circle_check" />

    </RelativeLayout>


</ScrollView>
